syntax = "proto3";


package rabbitmq;

message ReadyMessage {
  string user_id = 1;
}