syntax = "proto3";

package neo4j;

// The greeting service definition.
service Neo4j {
  // Sends a greeting
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}

  rpc CreateMatch (CreateMatchRequest) returns (CreateMatchResponse) {}

  rpc UpdateMatch (UpdateMatchRequest) returns (UpdateMatchResponse) {}

  rpc GetRelationshipScores (GetRelationshipScoresRequest) returns (GetRelationshipScoresResponse) {}

  rpc GetUserAttributesFilters(GetUserAttributesFiltersRequest) returns (GetUserAttributesFiltersResponse) {}
}

message CreateUserRequest {
  string user_id = 1;
}

message CreateUserResponse {
  bool error = 1;
  string message = 2;
  string priority = 3;
}


message CreateMatchRequest {
  string user_id1 = 1;
  string user_id2 = 2;
}

message CreateMatchResponse {
  bool error = 1;
  string message = 2;
  string user_id1 = 3;
  string user_id2 = 4;
  string relationship_id1 = 5;
  string relationship_id2 = 6;
}


message UpdateMatchRequest {
  string relationship_id = 1;
  string key = 2;
  string value = 3;
}

message UpdateMatchResponse {
  bool error = 1;
  string message = 2;
}

message GetRelationshipScoresRequest {
  string user_id = 1;
  repeated string other_users = 2;
}

message GetRelationshipScoresResponse {
  bool error = 1;
  string message = 2;
  map<string, float> relationship_scores = 3;
}


message GetUserAttributesFiltersRequest {
  string user_id = 1;
}

message GetUserAttributesFiltersResponse {
  bool error = 1;
  string message = 2;
  map<string, string> user_static_attributes = 3;
  map<string, string> user_static_filters = 4;
}